--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 
             <h5>Output</h5>
 <pre>
-let sprite = SKSpriteNode.spriteNode(imageNamed: @"<span id="codeImgName">img</span>")
+let sprite = SKSpriteNode.spriteNode(imageNamed: "<span id="codeImgName">img</span>")
 let offsetX = sprite.frame.size.width * sprite.anchorPoint.x
 let offsetY = sprite.frame.size.height * sprite.anchorPoint.y
 
