--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <div class="header_left">
 
 <div class="top_header">
-<h1>Welcome to my github page. I am <strong>Alok</strong> and I love <strong>iOS </strong>...</h1>
+<h1>Welcome to my github page. I am <strong>Alok</strong> and I love <strong>iOS </strong>.</h1>
 <h6>Click on appstore button to visit Appstore presense.</h6> 
  
 <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_button"></a> 
@@ -50,8 +50,6 @@
 <div class="mid_header">
 
 <p>This is a super place to add a tag line or something of importance to the app...</p>
-
-<p>We have over 50 - <strong>5 Star</strong> reviews on iTunes</p>
 
 </div>
 </div>
