--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
 
 <div class="header_right">
 
-<div class="iphone_one"></div>
-<div class="iphone_two"></div>
+    <div class="iphone_one"></div>
+    <div class="iphone_two"></div>
 </div>
 
 </div>
@@ -90,7 +90,24 @@
 
 </div>
 
+<!----  Section one.1  ---->
 
+<div class="section_one">
+
+<div class="waypoint"></div>
+
+<div class="inner_section">
+
+<div class="iphone_section_one"></div>
+
+<div class="section_text_wrapper">
+<h2>Sharing Made <strong>Simple</strong></h2>
+<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
+</div>
+</div>
+
+
+</div>
 
 
 
