happy mania added

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 <div class="iphone_section_one"></div>
 
 <div class="section_text_wrapper">
-<h2>Sharing Made <strong>Simple</strong></h2>
-<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
+<h2>Tappy Mania : Bird Edition <strong>1.0.0</strong></h2>
+<p>Same fun game play is back with stunning retina ready graphics</p>
 </div>
 </div>
 
