added black section after white

--- a/index.html
+++ b/index.html
@@ -89,6 +89,26 @@
 
 
 </div>
+    
+<!----  Section two  ---->
+
+<div class="section_two">
+
+<div class="waypoint"></div>
+
+<div class="inner_section">
+
+<div class="section_text_wrapper">
+
+<h2>Live <strong>Updates</strong></h2>
+<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
+</div>
+<div class="iphone_section_two"></div>
+
+</div>
+</div>
+
+
 
 <!----  Section one.1  ---->
 
@@ -113,7 +133,7 @@
 
 
 
-<!----  Section two  ---->
+<!----  Section two.1  ---->
 
 <div class="section_two">
 
