App Store icons added to each section

--- a/index.html
+++ b/index.html
@@ -82,9 +82,13 @@
 <div class="iphone_section_one"></div>
 
 <div class="section_text_wrapper">
+    <!-- show little icon of appstore -->
+<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
 <h2>Tappy Mania : Bird Edition <strong>1.0.0</strong></h2>
 <p>Same fun game play is back with stunning retina ready graphics</p>
+
 </div>
+    
 </div>
 
 
@@ -97,12 +101,11 @@
 <div class="waypoint"></div>
 
 <div class="inner_section">
-
 <div class="section_text_wrapper">
-
 <h2>Live <strong>Updates</strong></h2>
 <p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
 </div>
+    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
 <div class="iphone_section_two"></div>
 
 </div>
@@ -121,6 +124,7 @@
 <div class="iphone_section_one"></div>
 
 <div class="section_text_wrapper">
+    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
 <h2>Sharing Made <strong>Simple</strong></h2>
 <p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
 </div>
@@ -142,10 +146,10 @@
 <div class="inner_section">
 
 <div class="section_text_wrapper">
-
 <h2>Live <strong>Updates</strong></h2>
 <p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
 </div>
+    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
 <div class="iphone_section_two"></div>
 
 </div>
@@ -170,6 +174,7 @@
 <div class="iphone_section_three"></div>
 
 <div class="section_text_wrapper">
+<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
 
 <h2>New <strong>Auto-Save</strong></h2>
 <p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
