new images added
added the header images as screen of app

--- a/index.html
+++ b/index.html
@@ -266,13 +266,13 @@
 <div class="section_features">
 <div class="inner_wrapper">
 
-<h3>These people said good things about us....</h3>
-
+<h3>Let us know what you think. Constructive feedbacks are always welcom...</h3>
+<!--
 <a class="feature_logo_one" href="#"></a>
 <a class="feature_logo_two" href="#"></a>
 <a class="feature_logo_three" href="#"></a>
 <a class="feature_logo_four" href="#"></a>
-
+-->
 </div>
 
 <div class="divide"></div>
@@ -287,12 +287,12 @@
 <div class="footer">
 <div class="inner_wrapper">
 
-<div class="footer_left"><p>mappletech</p>© 2015</div>
+<div class="footer_left"><p>:)</p>© 2015 Alok Choudhary</div>
 
 <div class="footer_right">
-<a href="#" class="twitter_icon" title="Follow us on Twitter"></a>
-<a href="#" class="facebook_icon" title="Find us on Facebook"></a>
-<a href="#" class="appstore_icon" title="Find us on the App Store"></a>
+<a href="https://twitter.com/alokc83" class="twitter_icon" title="Follow us on Twitter"></a>
+<!-- <a href="#" class="facebook_icon" title="Find us on Facebook"></a> -->
+<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon" title="Find us on the App Store"></a>
 </div>
 </div>
 </div>
