--- a/index.html
+++ b/index.html
@@ -1,322 +1,68 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-
-<html xmlns="http://www.w3.org/1999/xhtml">
-
-<head>
-
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-
-<meta name="description" content=" "><!-- <<<<   Add a brief decription of your app -->
-<!--
-<meta name="copyright" content="<?php echo date("Y") ?>, App Name" /> -->
-
-<title>Under Construction!!!</title>
-
-<!----  User-Scalable = NO  ---->
-<meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;" />
-
-<!----  CSS  ---->
-<link href="site/css/styles.css" rel="stylesheet" type="text/css" />
-
-</head>
-
-
-<body onload="MM_preloadImages('site/images/header_background.png')">
-
-
-
-
-<!----  Header  ---->
-
-<div class="header_wrapper">
-
-<div class="header">
-
-<div class="inner_wrapper">
-
-<div class="header_left">
-
-<div class="top_header">
-<h1>Welcome to my github page. I am <strong>Alok</strong> and I love <strong>iOS </strong>.</h1>
-<h6>Click on appstore button to visit Appstore presense.</h6> 
- 
-<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_button"></a> 
-       <!--
-<p class="header_or"></p>
-    <a href="#" class="google_play_button"></a>
--->
-</div>
-
-<div class="mid_header">
-
-<p>This is a super place to add a tag line or something of importance to the app...</p>
-
-</div>
-</div>
-
-<div class="header_right">
-
-    <div class="iphone_one"></div>
-    <div class="iphone_two"></div>
-</div>
-
-</div>
-
-</div>
-
-<div class="divide"></div>
-
-</div>
-
-
-
-
-<!----  Section one  ---->
-
-<div class="section_one">
-
-<div class="waypoint"></div>
-
-<div class="inner_section">
-
-<div class="iphone_section_one"></div>
-
-<div class="section_text_wrapper">
-    <!-- show little icon of appstore -->
-<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
-<h2>Tappy Mania : Bird Edition <strong>1.0.0</strong></h2>
-<p>Same fun game play is back with stunning retina ready graphics</p>
-
-</div>
-    
-</div>
-
-
-</div>
-    
-<!----  Section two  ---->
-
-<div class="section_two">
-
-<div class="waypoint"></div>
-
-<div class="inner_section">
-<div class="section_text_wrapper">
-<h2>Live <strong>Updates</strong></h2>
-<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
-</div>
-    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
-<div class="iphone_section_two"></div>
-
-</div>
-</div>
-
-
-
-<!----  Section one.1  ---->
-
-<div class="section_one">
-
-<div class="waypoint"></div>
-
-<div class="inner_section">
-
-<div class="iphone_section_one"></div>
-
-<div class="section_text_wrapper">
-    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
-<h2>Sharing Made <strong>Simple</strong></h2>
-<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
-</div>
-</div>
-
-
-</div>
-
-
-
-
-
-<!----  Section two.1  ---->
-
-<div class="section_two">
-
-<div class="waypoint"></div>
-
-<div class="inner_section">
-
-<div class="section_text_wrapper">
-<h2>Live <strong>Updates</strong></h2>
-<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
-</div>
-    <a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
-<div class="iphone_section_two"></div>
-
-</div>
-</div>
-
-
-
-
-
-
-
-
-
-<!----  Section three  ---->
-
-<div class="section_three">
-
-<div class="waypoint"></div>
-
-<div class="inner_section">
-
-<div class="iphone_section_three"></div>
-
-<div class="section_text_wrapper">
-<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon"></a>
-
-<h2>New <strong>Auto-Save</strong></h2>
-<p>Mauris fringilla neque eu turpis dictum non vestibulum odio rutrum. Aenean blandit mattis urna, quis eleifend diam semper ac.</p>
-</div>
-
-</div>
-
-</div>
-
-
-
-
-
-
-
-
-
-
-<!----  Section - the team  ---->
-
-<div class="section_team">
-<div class="inner_wrapper">
-<div class="team_title">
-<h3>Please welcome "The Team", Drum roll please</h3>
-<p>The awesome people that created this app</p>
-</div>
-
-
-
-
-
-<!----  Team member one  ---->
-
-<div class="team_member_wrapper">
-<div class="team_user_icon team_member_one"></div>
-<div class="team_member_info">
-<h4>Lokesh Purohit</h4>
-<p>Idea Generator</p>
-<a href="#" class="team_social_icon_twitter" title="Follow on Twitter"></a>
-    <!--
-<a href="#" class="team_social_icon_dribbble" title="Follow on Dribbble"></a> 
--->
-</div>
-</div>
-
-
-
-
-
-
-<!----  Team member two  ---->
-
-<div class="team_member_wrapper">
-<div class="team_user_icon team_member_two"></div>
-<div class="team_member_info">
-<h4>Alok Choudhary</h4>
-<p>Developer</p>
-<a href="#" class="team_social_icon_twitter" title="Follow on Twitter"></a>
-</div>
-</div>
-
-
-
-
-
-<!----  Team member three  ---->
-
-<div class="team_member_wrapper">
-<div class="team_user_icon team_member_three"></div>
-<div class="team_member_info">
-<h4>Ashish Yadav</h4>
-<p>Project Manager</p>
-<a href="#" class="team_social_icon_twitter" title="Follow on Twitter"></a>
-</div>
-</div>
-
-
-</div>
-</div>
-
-
-
-
-
-
-<!----  Section features  ---->
-
-
-<div class="section_features">
-<div class="inner_wrapper">
-
-<h3>Let us know what you think. Constructive feedbacks are always welcom...</h3>
-<!--
-<a class="feature_logo_one" href="#"></a>
-<a class="feature_logo_two" href="#"></a>
-<a class="feature_logo_three" href="#"></a>
-<a class="feature_logo_four" href="#"></a>
--->
-</div>
-
-<div class="divide"></div>
-</div>
-
-
-
-
-<!----  Footer  ---->
-
-
-<div class="footer">
-<div class="inner_wrapper">
-
-<div class="footer_left"><p>:)</p>© 2015 Alok Choudhary</div>
-
-<div class="footer_right">
-<a href="https://twitter.com/alokc83" class="twitter_icon" title="Follow us on Twitter"></a>
-<!-- <a href="#" class="facebook_icon" title="Find us on Facebook"></a> -->
-<a href="https://itunes.apple.com/us/artist/alok-choudhary/id603363845" class="appstore_icon" title="Find us on the App Store"></a>
-</div>
-</div>
-</div>
-
-
-
-
-
-
-<!----  Scripts ---->
-<script src="site/js/jquery-1.9.1.min.js"></script>
-<script src="site/js/waypoints.min.js"></script>
-<script src="site/js/site.js"></script>
-
-
-<!----  Preload Images  ---->
-<script>
-function MM_preloadImages() { //v3.0
-var d=document; if(d.images){ if(!d.MM_p) d.MM_p=new Array();
-var i,j=d.MM_p.length,a=MM_preloadImages.arguments; for(i=0; i<a.length; i++)
-if (a[i].indexOf("#")!=0){ d.MM_p[j]=new Image; d.MM_p[j++].src=a[i];}}
-}
-</script>
-
-
-</body>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset='utf-8'>
+    <meta http-equiv="X-UA-Compatible" content="chrome=1">
+    <meta name="viewport" content="width=640" />
+
+    <link rel="stylesheet" href="stylesheets/core.css" media="screen"/>
+    <link rel="stylesheet" href="stylesheets/mobile.css" media="handheld, only screen and (max-device-width:640px)"/>
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css"/>
+
+    <script type="text/javascript" src="javascripts/modernizr.js"></script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/headsmart.min.js"></script>
+    <script type="text/javascript">
+      $(document).ready(function () {
+        $('#main_content').headsmart()
+      })
+    </script>
+    <title>Merlot GitHub Pages Theme by Someone Awesome</title>
+  </head>
+
+  <body>
+    <a id="forkme_banner" href="#">Fork Me on GitHub</a>
+    <div class="shell">
+
+      <header>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <h1>Merlot</h1>
+            <h2>a fancy schmancy theme for github pages</h2>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+      </header>
+
+      <section id="downloads">
+        <span class="inner">
+          <a href="#" class="zip"><em>download</em> .ZIP</a><a href="#" class="tgz"><em>download</em> .TGZ</a>
+        </span>
+      </section>
+
+      <span class="banner-fix"></span>
+
+      <section id="main_content">
+        <h3>Welcome to the Merlot</h3>
+        <p>We both know that you're pretty awesome. Why not have a fancy site for your code? You = Awesome. Your code = Awesome. So much awesome in one place.</p>
+
+        <p>Use this repo to build your own page, or generate one with <a href="http://pages.github.com">GitHub Pages</a>.</p>
+      </section>
+
+      <footer>
+        <span class="ribbon-outer">
+          <span class="ribbon-inner">
+            <p>this project by <a href="#">Someone Awesome</a> can be found on <a href="#">GitHub</a></p>
+          </span>
+          <span class="left-tail"></span>
+          <span class="right-tail"></span>
+        </span>
+        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <span class="octocat"></span>
+      </footer>
+
+    </div>
+
+  </body>
 </html>
