--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Merlot GitHub Pages Theme by Someone Awesome</title>
+    <title>Welcome to my Github Page.</title>
   </head>
 
   <body>
-    <a id="forkme_banner" href="#">Fork Me on GitHub</a>
+    <!-- <a id="forkme_banner" href="#">Fork Me on GitHub</a> -->
     <div class="shell">
 
       <header>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <h1>Merlot</h1>
-            <h2>a fancy schmancy theme for github pages</h2>
+            <h1>Alok Choudhary</h1>
+            <h2>Open World, Lets build it together.</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -37,28 +37,29 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="#" class="zip"><em>download</em> .ZIP</a><a href="#" class="tgz"><em>download</em> .TGZ</a>
+          <a href="#" class="zip"><em></em></a><a href="#" class="tgz"><em></em></a>
         </span>
       </section>
 
       <span class="banner-fix"></span>
 
       <section id="main_content">
-        <h3>Welcome to the Merlot</h3>
-        <p>We both know that you're pretty awesome. Why not have a fancy site for your code? You = Awesome. Your code = Awesome. So much awesome in one place.</p>
-
-        <p>Use this repo to build your own page, or generate one with <a href="http://pages.github.com">GitHub Pages</a>.</p>
+        <h3>Welcome Guest.</h3>
+        <p>I ahve been working as profesionla iOS Developer for Home Security system by by telecommunication company in United States.</p>
+          <p>While I ado that I like to contribute to dev community. I have wrote workflow scripts.</p>
+          <p>Physics Body Path Generator <a href="./physicsTool.html">SKPhysicsBody</a>.</p>
+        <!-- <p>Use this repo to build your own page, or generate one with <a href="http://pages.github.com">GitHub Pages</a>.</p> --> 
       </section>
 
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>this project by <a href="#">Someone Awesome</a> can be found on <a href="#">GitHub</a></p>
+            <p>Github page theme by <a href="https://github.com/cameronmcefee/">cameronmcefee</a> can be found on <a href="https://github.com/cameronmcefee/merlot">Merlot</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
         </span>
-        <p>Generated with <a href="http://pages.github.com">GitHub Pages</a> using Merlot</p>
+        <p>I love coding <a href="#">Apps</a> using Objective C and Swift</p>
         <span class="octocat"></span>
       </footer>
 
