Page update with current info

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Alok Choudhary</h1>
-            <h2>Open World, Lets build it together.</h2>
+            <h2>Open Source World, Lets build it together.</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
@@ -45,8 +45,10 @@
 
       <section id="main_content">
         <h3>Welcome Guest.</h3>
-        <p>I ahve been working as profesionla iOS Developer for Home Security system by by telecommunication company in United States.</p>
-          <p>While I do that I like to contribute to dev community. I have wrote workflow scripts.</p>
+        <p>I have been working as profesional iOS Developer for last 4 plus years.I have few open source contributions to give back to dev community.</p>
+          <p>When I am not working on my projects professional or person/ I like to contribute to open source projects. I have wrote xcode workflow scripts and have couple of open source source project that I try to maintain couple of that can be named as GMDKit and Xcode Auto version/build generator. </p>
+          <p>I have contributed to <strong>FastLane, Realm/Jazzy</strong> to name couple</p>
+          <p>I am at the moemnt looking for new challenging work, open to full-time, Contract to Hire and W2 contracts </p>
           <p>Tool that I find useful in my dev quest</p>
           <ul><p><li>Physics Body Path Generator <a href="./physicsTool.html">SKPhysicsBody</a></li></p></ul>
           
