--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>I have been working as profesional iOS Developer for last 4 plus years.I have few open source contributions to give back to dev community.</p>
           <p>When I am not working on my projects professional or person/ I like to contribute to open source projects. I have wrote xcode workflow scripts and have couple of open source source project that I try to maintain couple of that can be named as GMDKit and Xcode Auto version/build generator. </p>
           <p>I have contributed to <strong>FastLane, Realm/Jazzy</strong> to name couple</p>
-          <p>I am at the moemnt looking for new challenging work, open to full-time, Contract to Hire and W2 contracts </p>
+          <p>I am at the moment looking for new challenging work, open to full-time, Contract to Hire and W2 contracts </p>
           <p>Tool that I find useful in my dev quest</p>
           <ul><p><li>Physics Body Path Generator <a href="./physicsTool.html">SKPhysicsBody</a></li></p></ul>
           
