--- a/apt/index.html
+++ b/apt/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
-        <title>CokePokes Repo</title>
+        <title>alokc83 Repo</title>
         <link rel="stylesheet" type="text/css" href="menes.css"/>
         <link rel="stylesheet" type="text/css" href="style.css"/>
         <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0"/>
@@ -12,12 +12,12 @@
             <fieldset>
                 <div>
                     <ol style="margin-left:25px">
-                        <li>Open <strong>Cydia</strong></li>
-                        <li>Tap the <strong>Manage</strong> tab</li>
+                        <li>Open <strong>Cydia/Sileo/Zebra</strong></li>
+                        <li>Tap the <strong>Manage/Sources/</strong> tab</li>
                         <li>Tap <strong>Sources</strong></li>
                         <li>Tap the <strong>Edit</strong> button</li>
                         <li>Tap the <strong>Add</strong> button</li>
-                        <li>Type: <strong>cokepokes.github.io</strong></li>
+                        <li>Type: <strong>alokc83.github.io</strong></li>
                         <li>Tap <strong>Add Source</strong></li>
                     </ol>
                 </div>
@@ -27,11 +27,25 @@
             </fieldset>
         </panel>
         <panel>
-            <label>Have Cydia Installed?</label>
+            <label>Have Apps Installed?</label>
             <fieldset>
                 <a href="cydia://sources">
                     <div>
                         <label>Launch Cydia &amp; Add</label>
+                    </div>
+                </a>
+            </fieldset>
+            <fieldset>
+                <a href="sileo://source/https://alokc83.github.com/apt">
+                    <div>
+                        <label>Launch Sileo &amp; Add</label>
+                    </div>
+                </a>
+            </fieldset>
+            <fieldset>
+                <a href="zbra://sources/add/https://alokc83.github.com/apt">
+                    <div>
+                        <label>Launch Zebra &amp; Add</label>
                     </div>
                 </a>
             </fieldset>
